--- a/chat/templates/chat/room.html
+++ b/chat/templates/chat/room.html
@@ -24,7 +24,7 @@
                 "/ws/chat/room/" + userId + "/";
     const chatSocket = new WebSocket(url);
     const requestUser = JSON.parse(
-        document.getElementById("user-id").textContent
+        document.getElementById("request-user").textContent
     );
 
     chatSocket.onmessage = function(event) {
@@ -32,17 +32,7 @@
         const data = JSON.parse(event.data);
         const chat = document.getElementById('chat')
 
-        const dateOptions = {hour: "numeric", minute: "numeric", hour12:true};
-        const datetime = new Date(data.datetime).toLocaleString("ko-KR", dateOptions)
-        const isMe = data.user == requestUser
-        const source = isMe ? "me" : "other";
-        const name = isMe ? "me" : data.user;
-
-        chat.innerHTML += "<div class='message " + source + "'>" + 
-                            "<strong>" + name + "</strong> " +
-                            "<span class='data'>" + datetime + "</span><br>" + 
-                            data.message + "</div>";
-        chat.scrollTop = chat.scrollHeight;
+        appendMessage(data, chat);
     };
 
     chatSocket.onclose = function(event) {
@@ -55,7 +45,18 @@
     submitButton.addEventListener("click", function(event) {
         const message = input.value;
         if (message) {
-            chatSocket.send(JSON.stringify({"message": message}));
+            <!-- chatSocket.send(JSON.stringify({"message": message})); -->
+
+            const data = {
+                message: message,
+                user: requestUser,
+                datetime: new Date().toISOString()
+            };
+            chatSocket.send(JSON.stringify(data));
+
+            const chat = document.getElementById('chat');
+            appendMessage(data, chat, true);
+            
             input.value = '';
             input.focus();
         }
@@ -67,6 +68,19 @@
             submitButton.click();
         }
     });
+
+    function appendMessage(data, chatElement, isLocal = false) {
+        const dateOptions = {hour: "numeric", minute: "numeric", hour12: true};
+        const datetime = new Date(data.datetime).toLocaleString("ko-KR", dateOptions);
+        const source = isLocal ? "me" : (data.user === requestUser ? "me" : "other");
+        const name = isLocal ? requestUser : "주문봇";
+    
+        chatElement.innerHTML += `<div class='message ${source}'>
+            <strong>${name}</strong>
+            <span class='date'>${datetime}</span><br>
+            ${data.message}</div>`;
+        chatElement.scrollTop = chatElement.scrollHeight;
+    }
 
     input.focus();
 
