실제 Django ORM 쿼리로 구현한 함수 구현 중.

--- a/chat/templates/chat/room.html
+++ b/chat/templates/chat/room.html
@@ -49,7 +49,7 @@
 
             const data = {
                 message: message,
-                user: requestUser,
+                user_id: userId,
                 datetime: new Date().toISOString()
             };
             chatSocket.send(JSON.stringify(data));
