--- a/chat/templates/base.html
+++ b/chat/templates/base.html
@@ -4,25 +4,41 @@
   <head>
     <meta charset="utf-8" />
     <title>{% block title %}주문봇{% endblock %}</title>
-    <!-- <link href="{% static "css/base.css" %}" rel="stylesheet"> -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="{% static 'css/styles.css' %}" rel="stylesheet">
   </head>
   <body>
-    <div id="header">
-      <a href="/" class="logo">주문하시겠습니까?</a>
-      <ul class="menu">
-        {% if request.user.is_authenticated %}
-          <li><a href="{% url 'logout' %}">Sign out</a></li>
-        {% else %}
-          <li><a href="{% url 'login' %}">Sign in</a></li>
-        {% endif %}
-      </ul>
-    </div>
-    <div id="content">
+    <nav class="navbar navbar-expand-lg navbar-custom">
+      <div class="container-fluid">
+        <a class="navbar-brand navbar-brand-custom w-100 text-center" href="/" class="logo">
+          주문하시겠습니까?
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ms-auto">
+            {% if request.user.is_authenticated %}
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'logout' %}">Sign out</a>
+              </li>
+            {% else %}
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'login' %}">Sign in</a>
+              </li>
+            {% endif %}
+          </ul>
+        </div>
+      </div>
+  </nav>
+    <div id="container mt-4">
       {% block content %}
       {% endblock %}
     </div>
     {% block include_js %}
     {% endblock %}
+    <script>
+      <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/js/bootstrap.bundle.min.js" integrity="sha384-ka5u10Iv4Db7j6QCdXxAwEQQtRF4ETtZkMF5X0LMU18zV2ZIB0Czbg1oTr5uB8sS" crossorigin="anonymous"></script>
     <script>
       document.addEventListener('DOMContentLoaded', (event) => {
         {% block domready %}
