--- a/chat/templates/chat/room.html
+++ b/chat/templates/chat/room.html
@@ -24,6 +24,11 @@
     {% load static %}
     <link rel="stylesheet" type="text/css" href="{% static 'css/styles.css' %}">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+Knujsl7/5hb7ie1TO5y6mAbviu1RI5B+YkLDz/5qFaRi7j" crossorigin="anonymous">
+    <style>
+        .message-content {
+            white-space: pre-wrap;
+        }
+    </style>
 {% endblock %}
 
 {% block include_js %}
@@ -47,7 +52,7 @@
     let currentOrderDetails = null;
     let currentRequestType = null;
     let currentConfirmMessage = null;
-    let currentApprovalRequest = null;
+    let currentToolCallId = null;
     
     chatSocket.onmessage = function(event) {
         console.log("Message received:", event.data);  // 메시지 수신 로그
@@ -72,7 +77,7 @@
             currentOrderId = data.order_id;
             currentRequestType = data.request_type;
             currentConfirmMessage = data.confirm_message;
-            currentApprovalRequest = data.approval_request;
+            currentToolCallId = data.tool_call_id;
         }
     };
 
@@ -102,8 +107,8 @@
             if (currentConfirmMessage) {
                 data.confirmMessage = currentConfirmMessage;
             }
-            if (currentApprovalRequest) {
-                data.approvalRequest = currentApprovalRequest;
+            if (currentToolCallId) {
+                data.toolCallId = currentToolCallId;
             }
             
             console.log("전송 데이터\n", data)
@@ -141,7 +146,7 @@
         chatElement.innerHTML += `<div class='message ${source}'>
             <strong>${name}</strong>
             <span class='date'>${datetime}</span><br>
-            ${data.message}</div>`;
+            <span class='message-content'>${data.message}</span></div>`;
         chatElement.scrollTop = chatElement.scrollHeight;
     }
 
