주문, 주문 변경, 주문 취소 단계에 각 경우에 맞는 요청 내용 구체화 과정, 요청 확인, 요청 승인 단계 추가

--- a/chat/templates/chat/room.html
+++ b/chat/templates/chat/room.html
@@ -59,10 +59,12 @@
         const data = JSON.parse(event.data);
         const chat = document.getElementById('chat')
 
+        if (data.message) {
+            appendMessage(data, chat);
+        }
+    
         if (data.recent_orders) {
             displayRecentOrders(data.recent_orders);
-        } else {
-            appendMessage(data, chat);
         }
 
         // confirm_message가 있는 경우 orderId 저장
